# AOCOcaml

./: .gitignore  AOCOCaml.opam  README.md  dune-project
DayOne/: dune  dune-project  main.ml
DayOne/lib/: dune
DayOne/test/: dune
DayTwo/: dune  main.ml
lib/: DayOne.ml  DayTwo.ml  ElfCalorie.ml  IO.ml  dune
