(lang dune 3.9)

(name AOCOCaml)

(generate_opam_files true)

(source
 (github BrianTipton1/AOCOCaml))

(authors "Brian Tipton")

(maintainers "Brian Tipton")

(license LICENSE)

(documentation https://github.com/BrianTipton1/AOCOcaml/README.md)

(package
 (name AOCOCaml)
 (synopsis "Advent of Code 2022 in OCaml")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

